fixed vertical alignment

--- a/public/styles.css
+++ b/public/styles.css
@@ -59,6 +59,7 @@ body {
 
 #ketdeba {
   color: #ffae2f;
+  margin: auto;
 }
 
 #ketdeba a {
